--- a/sass/app.scss
+++ b/sass/app.scss
@@ -14,10 +14,31 @@ body {
   height: 100%;
   margin: 0;
   padding: 0;
+  cursor: url('../assets/cursor/cursor.png'), auto;
 }
 
 body {
-  font-family: 'Coda', cursive;
+  font-family: 'Open Sans', sans-serif;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.pop-up {
+  position: absolute;
+  margin: 0 auto;
+  top: 40%;
+  width: 300px;
+  background: wheat;
+  transform: scale(0.2);
+  transition: transform 0.4s;
+  visibility: hidden;
+
+  &:hover {
+    visibility: show;
+    transform: scale(1.0);
+  }
 }
 
 .container {
@@ -25,25 +46,39 @@ body {
   justify-content: center;
   align-items: center;
   flex-direction: column;
+
+  &.container-endgame {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background: white;
+    content: '';
+    opacity: 0.8;
+  }
 }
 
 h1 {
-  font-family: 'Open Sans', sans-serif;
+  font-family: 'Indie Flower', sans-serif;
   font-weight: 300;
+}
+
+h3 {
+  text-transform: uppercase;
+  font-size: 14px;
+  font-weight: 400;
+  letter-spacing: 1.2px;
+  text-align: center;
+  font-family: 'Open Sans', sans-serif;
 }
 
 /*
  * Styles for the deck of cards
  */
-
-
 .deck {
   width: 660px;
   min-height: 680px;
-  background: linear-gradient(160deg, #02ccba 0%, #aa7ecd 100%);
   padding: 32px;
   border-radius: 10px;
-  box-shadow: 12px 15px 20px 0 rgba(46, 61, 73, 0.5);
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
@@ -57,12 +92,10 @@ h1 {
     background-color: transparent;
     font-size: 0;
     color: #ffffff;
-    border-radius: 8px;
-    cursor: pointer;
+    cursor: url('../assets/cursor/cursor-hover.png'), auto;
     display: flex;
     justify-content: center;
     align-items: center;
-    box-shadow: 5px 2px 20px 0 rgba(46, 61, 73, 0.5);
     perspective: 1000px;
 
     .content {
@@ -70,7 +103,7 @@ h1 {
       width: 100%;
       height: 100%;
       text-align: center;
-      transition: transform 0.8s;
+      transition: transform 1s;
       transform-style: preserve-3d;
 
       &.show {
@@ -118,6 +151,10 @@ h1 {
           width: 100%;
           height: 100%;
           object-fit: cover;
+
+          &:active {
+            border: 5px solid white;
+          }
         }
 
       }
@@ -156,7 +193,6 @@ h1 {
 
   .restart {
     float: right;
-    cursor: pointer;
   }
 
 }
