--- a/stylesheets/app.css
+++ b/stylesheets/app.css
@@ -17,45 +17,84 @@ body {
   height: 100%;
   margin: 0;
   padding: 0;
+  cursor: url("../assets/cursor/cursor.png"), auto;
 }
 
-/* line 19, ../sass/app.scss */
+/* line 20, ../sass/app.scss */
 body {
-  font-family: 'Coda', cursive;
+  font-family: 'Open Sans', sans-serif;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
 }
 
-/* line 23, ../sass/app.scss */
+/* line 28, ../sass/app.scss */
+.pop-up {
+  position: absolute;
+  margin: 0 auto;
+  top: 40%;
+  width: 300px;
+  background: wheat;
+  transform: scale(0.2);
+  transition: transform 0.4s;
+  visibility: hidden;
+}
+/* line 38, ../sass/app.scss */
+.pop-up:hover {
+  visibility: show;
+  transform: scale(1);
+}
+
+/* line 44, ../sass/app.scss */
 .container {
   display: flex;
   justify-content: center;
   align-items: center;
   flex-direction: column;
 }
+/* line 50, ../sass/app.scss */
+.container.container-endgame {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background: white;
+  content: '';
+  opacity: 0.8;
+}
 
-/* line 30, ../sass/app.scss */
+/* line 60, ../sass/app.scss */
 h1 {
-  font-family: 'Open Sans', sans-serif;
+  font-family: 'Indie Flower', sans-serif;
   font-weight: 300;
+}
+
+/* line 65, ../sass/app.scss */
+h3 {
+  text-transform: uppercase;
+  font-size: 14px;
+  font-weight: 400;
+  letter-spacing: 1.2px;
+  text-align: center;
+  font-family: 'Open Sans', sans-serif;
 }
 
 /*
  * Styles for the deck of cards
  */
-/* line 40, ../sass/app.scss */
+/* line 77, ../sass/app.scss */
 .deck {
   width: 660px;
   min-height: 680px;
-  background: linear-gradient(160deg, #02ccba 0%, #aa7ecd 100%);
   padding: 32px;
   border-radius: 10px;
-  box-shadow: 12px 15px 20px 0 rgba(46, 61, 73, 0.5);
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
   align-items: center;
   margin: 0 0 3em;
 }
-/* line 53, ../sass/app.scss */
+/* line 88, ../sass/app.scss */
 .deck .card {
   overflow: hidden;
   height: 125px;
@@ -63,28 +102,26 @@ h1 {
   background-color: transparent;
   font-size: 0;
   color: #ffffff;
-  border-radius: 8px;
-  cursor: pointer;
+  cursor: url("../assets/cursor/cursor-hover.png"), auto;
   display: flex;
   justify-content: center;
   align-items: center;
-  box-shadow: 5px 2px 20px 0 rgba(46, 61, 73, 0.5);
   perspective: 1000px;
 }
-/* line 68, ../sass/app.scss */
+/* line 101, ../sass/app.scss */
 .deck .card .content {
   position: relative;
   width: 100%;
   height: 100%;
   text-align: center;
-  transition: transform 0.8s;
+  transition: transform 1s;
   transform-style: preserve-3d;
 }
-/* line 76, ../sass/app.scss */
+/* line 109, ../sass/app.scss */
 .deck .card .content.show {
   transform: rotateY(180deg);
 }
-/* line 80, ../sass/app.scss */
+/* line 113, ../sass/app.scss */
 .deck .card .content .front,
 .deck .card .content .back {
   position: absolute;
@@ -92,12 +129,12 @@ h1 {
   height: 100%;
   backface-visibility: hidden;
 }
-/* line 87, ../sass/app.scss */
+/* line 120, ../sass/app.scss */
 .deck .card .content .front.matched,
 .deck .card .content .back.matched {
   position: relative;
 }
-/* line 90, ../sass/app.scss */
+/* line 123, ../sass/app.scss */
 .deck .card .content .front.matched:after,
 .deck .card .content .back.matched:after {
   content: 'MATCHED';
@@ -113,24 +150,28 @@ h1 {
   justify-content: center;
   align-items: center;
 }
-/* line 107, ../sass/app.scss */
+/* line 140, ../sass/app.scss */
 .deck .card .content .front {
   background-color: dodgerblue;
   color: black;
 }
-/* line 112, ../sass/app.scss */
+/* line 145, ../sass/app.scss */
 .deck .card .content .back {
   background-color: dodgerblue;
   color: white;
   transform: rotateY(180deg);
 }
-/* line 117, ../sass/app.scss */
+/* line 150, ../sass/app.scss */
 .deck .card .content .back img {
   width: 100%;
   height: 100%;
   object-fit: cover;
 }
-/* line 127, ../sass/app.scss */
+/* line 155, ../sass/app.scss */
+.deck .card .content .back img:active {
+  border: 5px solid white;
+}
+/* line 164, ../sass/app.scss */
 .deck .card:hover .content {
   transform: rotateY(180deg);
 }
@@ -138,26 +179,25 @@ h1 {
 /*
  * Styles for the Score Panel
  */
-/* line 140, ../sass/app.scss */
+/* line 177, ../sass/app.scss */
 .score-panel {
   text-align: left;
   width: 345px;
   margin-bottom: 10px;
 }
-/* line 145, ../sass/app.scss */
+/* line 182, ../sass/app.scss */
 .score-panel .stars {
   margin: 0;
   padding: 0;
   display: inline-block;
   margin: 0 5px 0 0;
 }
-/* line 151, ../sass/app.scss */
+/* line 188, ../sass/app.scss */
 .score-panel .stars li {
   list-style: none;
   display: inline-block;
 }
-/* line 157, ../sass/app.scss */
+/* line 194, ../sass/app.scss */
 .score-panel .restart {
   float: right;
-  cursor: pointer;
 }
