--- a/stylesheets/app.css
+++ b/stylesheets/app.css
@@ -22,14 +22,10 @@ body {
 
 /* line 20, ../sass/app.scss */
 body {
-  font-family: 'Open Sans', sans-serif;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
+  font-family: 'VT323', monospace;
 }
 
-/* line 28, ../sass/app.scss */
+/* line 24, ../sass/app.scss */
 .pop-up {
   position: absolute;
   margin: 0 auto;
@@ -40,20 +36,20 @@ body {
   transition: transform 0.4s;
   visibility: hidden;
 }
-/* line 38, ../sass/app.scss */
+/* line 34, ../sass/app.scss */
 .pop-up:hover {
   visibility: show;
   transform: scale(1);
 }
 
-/* line 44, ../sass/app.scss */
+/* line 40, ../sass/app.scss */
 .container {
   display: flex;
   justify-content: center;
   align-items: center;
   flex-direction: column;
 }
-/* line 50, ../sass/app.scss */
+/* line 46, ../sass/app.scss */
 .container.container-endgame {
   position: absolute;
   width: 100%;
@@ -63,26 +59,26 @@ body {
   opacity: 0.8;
 }
 
-/* line 60, ../sass/app.scss */
+/* line 56, ../sass/app.scss */
 h1 {
-  font-family: 'Indie Flower', sans-serif;
+  font-family: 'VT323', monospace;
   font-weight: 300;
 }
 
-/* line 65, ../sass/app.scss */
+/* line 61, ../sass/app.scss */
 h3 {
   text-transform: uppercase;
   font-size: 14px;
   font-weight: 400;
   letter-spacing: 1.2px;
   text-align: center;
-  font-family: 'Open Sans', sans-serif;
+  font-family: 'VT323', monospace;
 }
 
 /*
  * Styles for the deck of cards
  */
-/* line 77, ../sass/app.scss */
+/* line 73, ../sass/app.scss */
 .deck {
   width: 660px;
   min-height: 680px;
@@ -94,7 +90,7 @@ h3 {
   align-items: center;
   margin: 0 0 3em;
 }
-/* line 88, ../sass/app.scss */
+/* line 84, ../sass/app.scss */
 .deck .card {
   overflow: hidden;
   height: 125px;
@@ -108,7 +104,7 @@ h3 {
   align-items: center;
   perspective: 1000px;
 }
-/* line 101, ../sass/app.scss */
+/* line 97, ../sass/app.scss */
 .deck .card .content {
   position: relative;
   width: 100%;
@@ -117,11 +113,11 @@ h3 {
   transition: transform 1s;
   transform-style: preserve-3d;
 }
-/* line 109, ../sass/app.scss */
+/* line 105, ../sass/app.scss */
 .deck .card .content.show {
   transform: rotateY(180deg);
 }
-/* line 113, ../sass/app.scss */
+/* line 109, ../sass/app.scss */
 .deck .card .content .front,
 .deck .card .content .back {
   position: absolute;
@@ -129,12 +125,12 @@ h3 {
   height: 100%;
   backface-visibility: hidden;
 }
-/* line 120, ../sass/app.scss */
+/* line 116, ../sass/app.scss */
 .deck .card .content .front.matched,
 .deck .card .content .back.matched {
   position: relative;
 }
-/* line 123, ../sass/app.scss */
+/* line 119, ../sass/app.scss */
 .deck .card .content .front.matched:after,
 .deck .card .content .back.matched:after {
   content: 'MATCHED';
@@ -150,28 +146,28 @@ h3 {
   justify-content: center;
   align-items: center;
 }
-/* line 140, ../sass/app.scss */
+/* line 136, ../sass/app.scss */
 .deck .card .content .front {
   background-color: dodgerblue;
   color: black;
 }
-/* line 145, ../sass/app.scss */
+/* line 141, ../sass/app.scss */
 .deck .card .content .back {
   background-color: dodgerblue;
   color: white;
   transform: rotateY(180deg);
 }
-/* line 150, ../sass/app.scss */
+/* line 146, ../sass/app.scss */
 .deck .card .content .back img {
   width: 100%;
   height: 100%;
   object-fit: cover;
 }
-/* line 155, ../sass/app.scss */
+/* line 151, ../sass/app.scss */
 .deck .card .content .back img:active {
   border: 5px solid white;
 }
-/* line 164, ../sass/app.scss */
+/* line 160, ../sass/app.scss */
 .deck .card:hover .content {
   transform: rotateY(180deg);
 }
@@ -179,25 +175,39 @@ h3 {
 /*
  * Styles for the Score Panel
  */
-/* line 177, ../sass/app.scss */
+/* line 173, ../sass/app.scss */
 .score-panel {
   text-align: left;
   width: 345px;
   margin-bottom: 10px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  font-size: 30px;
+  border-bottom: 5px dashed pink;
+  min-width: 400px;
+  padding-left: 20px;
+  padding: 0px 20px 20px 20px;
 }
-/* line 182, ../sass/app.scss */
+/* line 186, ../sass/app.scss */
 .score-panel .stars {
   margin: 0;
   padding: 0;
   display: inline-block;
   margin: 0 5px 0 0;
 }
-/* line 188, ../sass/app.scss */
+/* line 192, ../sass/app.scss */
 .score-panel .stars li {
   list-style: none;
   display: inline-block;
 }
-/* line 194, ../sass/app.scss */
+/* line 198, ../sass/app.scss */
 .score-panel .restart {
   float: right;
+  background-color: pink;
+  padding: 10px 15px;
+  color: white;
+  text-transform: uppercase;
+  font-size: 20px;
+  border-radius: 3px;
 }
