--- a/stylesheets/app.css
+++ b/stylesheets/app.css
@@ -14,42 +14,51 @@ html {
 html,
 body {
   width: 100%;
-  height: 100%;
   margin: 0;
   padding: 0;
   cursor: url("../assets/cursor/cursor.png"), auto;
 }
 
-/* line 20, ../sass/app.scss */
-body {
-  font-family: 'VT323', monospace;
+/* line 19, ../sass/app.scss */
+html {
+  height: 100%;
 }
 
-/* line 24, ../sass/app.scss */
+/* line 23, ../sass/app.scss */
+body {
+  font-family: 'VT323', monospace;
+  min-height: 100%;
+  background-image: linear-gradient(#fff1f1, #dcd0ef);
+  background-attachment: fixed;
+}
+
+/* line 30, ../sass/app.scss */
 .pop-up {
   position: absolute;
   margin: 0 auto;
   top: 40%;
   width: 300px;
   background: wheat;
-  transform: scale(0.2);
-  transition: transform 0.4s;
-  visibility: hidden;
-}
-/* line 34, ../sass/app.scss */
-.pop-up:hover {
-  visibility: show;
   transform: scale(1);
+  transition: transform 0.4s;
+  min-height: 150px;
+  padding: 10px;
+  /*
+   &:hover {
+     visibility: show;
+     transform: scale(1.0);
+   }
+   */
 }
 
-/* line 40, ../sass/app.scss */
+/* line 49, ../sass/app.scss */
 .container {
   display: flex;
   justify-content: center;
   align-items: center;
   flex-direction: column;
 }
-/* line 46, ../sass/app.scss */
+/* line 55, ../sass/app.scss */
 .container.container-endgame {
   position: absolute;
   width: 100%;
@@ -59,13 +68,13 @@ body {
   opacity: 0.8;
 }
 
-/* line 56, ../sass/app.scss */
+/* line 65, ../sass/app.scss */
 h1 {
   font-family: 'VT323', monospace;
   font-weight: 300;
 }
 
-/* line 61, ../sass/app.scss */
+/* line 70, ../sass/app.scss */
 h3 {
   text-transform: uppercase;
   font-size: 14px;
@@ -78,19 +87,20 @@ h3 {
 /*
  * Styles for the deck of cards
  */
-/* line 73, ../sass/app.scss */
+/* line 82, ../sass/app.scss */
 .deck {
-  width: 660px;
+  width: 600px;
   min-height: 680px;
-  padding: 32px;
-  border-radius: 10px;
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-between;
+  justify-content: space-around;
   align-items: center;
   margin: 0 0 3em;
+  position: relative;
+  padding: 0;
+  padding: 20px;
 }
-/* line 84, ../sass/app.scss */
+/* line 94, ../sass/app.scss */
 .deck .card {
   overflow: hidden;
   height: 125px;
@@ -104,7 +114,7 @@ h3 {
   align-items: center;
   perspective: 1000px;
 }
-/* line 97, ../sass/app.scss */
+/* line 107, ../sass/app.scss */
 .deck .card .content {
   position: relative;
   width: 100%;
@@ -113,11 +123,11 @@ h3 {
   transition: transform 1s;
   transform-style: preserve-3d;
 }
-/* line 105, ../sass/app.scss */
+/* line 115, ../sass/app.scss */
 .deck .card .content.show {
   transform: rotateY(180deg);
 }
-/* line 109, ../sass/app.scss */
+/* line 119, ../sass/app.scss */
 .deck .card .content .front,
 .deck .card .content .back {
   position: absolute;
@@ -125,12 +135,12 @@ h3 {
   height: 100%;
   backface-visibility: hidden;
 }
-/* line 116, ../sass/app.scss */
+/* line 126, ../sass/app.scss */
 .deck .card .content .front.matched,
 .deck .card .content .back.matched {
   position: relative;
 }
-/* line 119, ../sass/app.scss */
+/* line 129, ../sass/app.scss */
 .deck .card .content .front.matched:after,
 .deck .card .content .back.matched:after {
   content: 'MATCHED';
@@ -146,36 +156,61 @@ h3 {
   justify-content: center;
   align-items: center;
 }
-/* line 136, ../sass/app.scss */
+/* line 146, ../sass/app.scss */
 .deck .card .content .front {
   background-color: dodgerblue;
   color: black;
 }
-/* line 141, ../sass/app.scss */
+/* line 151, ../sass/app.scss */
 .deck .card .content .back {
-  background-color: dodgerblue;
   color: white;
   transform: rotateY(180deg);
 }
-/* line 146, ../sass/app.scss */
+/* line 155, ../sass/app.scss */
 .deck .card .content .back img {
   width: 100%;
   height: 100%;
   object-fit: cover;
 }
-/* line 151, ../sass/app.scss */
+/* line 160, ../sass/app.scss */
 .deck .card .content .back img:active {
   border: 5px solid white;
 }
-/* line 160, ../sass/app.scss */
+/* line 169, ../sass/app.scss */
 .deck .card:hover .content {
   transform: rotateY(180deg);
+}
+/* line 175, ../sass/app.scss */
+.deck:after {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  content: '';
+  background-color: #d9dffff5;
+  padding: 32px;
+  margin: 0 0 3em;
+  border-radius: 10px;
 }
 
 /*
  * Styles for the Score Panel
  */
-/* line 173, ../sass/app.scss */
+/* line 190, ../sass/app.scss */
+.button {
+  float: right;
+  background-color: pink;
+  padding: 10px 15px;
+  color: white;
+  text-transform: uppercase;
+  font-size: 20px;
+  border-radius: 3px;
+}
+/* line 199, ../sass/app.scss */
+.button:active {
+  background-color: dodgerblue;
+}
+
+/* line 204, ../sass/app.scss */
 .score-panel {
   text-align: left;
   width: 345px;
@@ -189,25 +224,15 @@ h3 {
   padding-left: 20px;
   padding: 0px 20px 20px 20px;
 }
-/* line 186, ../sass/app.scss */
+/* line 217, ../sass/app.scss */
 .score-panel .stars {
   margin: 0;
   padding: 0;
   display: inline-block;
   margin: 0 5px 0 0;
 }
-/* line 192, ../sass/app.scss */
+/* line 223, ../sass/app.scss */
 .score-panel .stars li {
   list-style: none;
   display: inline-block;
-}
-/* line 198, ../sass/app.scss */
-.score-panel .restart {
-  float: right;
-  background-color: pink;
-  padding: 10px 15px;
-  color: white;
-  text-transform: uppercase;
-  font-size: 20px;
-  border-radius: 3px;
 }
