--- a/stylesheets/app.css
+++ b/stylesheets/app.css
@@ -65,15 +65,20 @@ body {
   text-align: center;
   margin: 0px 10px 20px 10px;
 }
+/* line 62, ../sass/app.scss */
+.pop-up .subtitle img {
+  max-width: 30px;
+  max-height: 30px;
+}
 
-/* line 64, ../sass/app.scss */
+/* line 69, ../sass/app.scss */
 .container {
   display: flex;
   justify-content: center;
   align-items: center;
   flex-direction: column;
 }
-/* line 70, ../sass/app.scss */
+/* line 75, ../sass/app.scss */
 .container.container-endgame {
   position: absolute;
   width: 100%;
@@ -83,13 +88,13 @@ body {
   opacity: 0.8;
 }
 
-/* line 80, ../sass/app.scss */
+/* line 85, ../sass/app.scss */
 h1 {
   font-family: 'VT323', monospace;
   font-weight: 300;
 }
 
-/* line 85, ../sass/app.scss */
+/* line 90, ../sass/app.scss */
 h3 {
   text-transform: uppercase;
   font-size: 14px;
@@ -102,7 +107,7 @@ h3 {
 /*
  * Styles for the deck of cards
  */
-/* line 97, ../sass/app.scss */
+/* line 102, ../sass/app.scss */
 .deck {
   width: 600px;
   min-height: 680px;
@@ -115,7 +120,7 @@ h3 {
   padding: 0;
   padding: 20px;
 }
-/* line 109, ../sass/app.scss */
+/* line 114, ../sass/app.scss */
 .deck .card {
   overflow: hidden;
   height: 125px;
@@ -129,7 +134,7 @@ h3 {
   align-items: center;
   perspective: 1000px;
 }
-/* line 122, ../sass/app.scss */
+/* line 127, ../sass/app.scss */
 .deck .card .content {
   position: relative;
   width: 100%;
@@ -138,11 +143,11 @@ h3 {
   transition: transform 0.5s;
   transform-style: preserve-3d;
 }
-/* line 130, ../sass/app.scss */
+/* line 135, ../sass/app.scss */
 .deck .card .content.show {
   transform: rotateY(180deg);
 }
-/* line 134, ../sass/app.scss */
+/* line 139, ../sass/app.scss */
 .deck .card .content .front,
 .deck .card .content .back {
   position: absolute;
@@ -150,12 +155,12 @@ h3 {
   height: 100%;
   backface-visibility: hidden;
 }
-/* line 141, ../sass/app.scss */
+/* line 146, ../sass/app.scss */
 .deck .card .content .front.matched,
 .deck .card .content .back.matched {
   position: relative;
 }
-/* line 144, ../sass/app.scss */
+/* line 149, ../sass/app.scss */
 .deck .card .content .front.matched:after,
 .deck .card .content .back.matched:after {
   content: 'MATCHED';
@@ -171,31 +176,31 @@ h3 {
   justify-content: center;
   align-items: center;
 }
-/* line 161, ../sass/app.scss */
+/* line 166, ../sass/app.scss */
 .deck .card .content .front {
   background-color: dodgerblue;
   color: black;
 }
-/* line 166, ../sass/app.scss */
+/* line 171, ../sass/app.scss */
 .deck .card .content .back {
   color: white;
   transform: rotateY(180deg);
 }
-/* line 170, ../sass/app.scss */
+/* line 175, ../sass/app.scss */
 .deck .card .content .back img {
   width: 100%;
   height: 100%;
   object-fit: cover;
 }
-/* line 175, ../sass/app.scss */
+/* line 180, ../sass/app.scss */
 .deck .card .content .back img:active {
   border: 5px solid white;
 }
-/* line 184, ../sass/app.scss */
+/* line 189, ../sass/app.scss */
 .deck .card:hover .content {
   transform: rotateY(180deg);
 }
-/* line 190, ../sass/app.scss */
+/* line 195, ../sass/app.scss */
 .deck:after {
   position: absolute;
   width: 100%;
@@ -206,7 +211,7 @@ h3 {
   margin: 0 0 3em;
   border-radius: 10px;
 }
-/* line 202, ../sass/app.scss */
+/* line 207, ../sass/app.scss */
 .deck.hide-cover:after {
   display: none;
 }
@@ -214,7 +219,7 @@ h3 {
 /*
  * Styles for the Score Panel
  */
-/* line 211, ../sass/app.scss */
+/* line 216, ../sass/app.scss */
 .button {
   float: right;
   background-color: pink;
@@ -224,18 +229,17 @@ h3 {
   font-size: 20px;
   border-radius: 3px;
 }
-/* line 220, ../sass/app.scss */
+/* line 225, ../sass/app.scss */
 .button:active {
   background-color: dodgerblue;
 }
 
-/* line 225, ../sass/app.scss */
+/* line 230, ../sass/app.scss */
 .score-panel {
   text-align: left;
-  width: 345px;
   margin-bottom: 10px;
   display: flex;
-  justify-content: space-between;
+  justify-content: space-around;
   align-items: center;
   font-size: 30px;
   border-bottom: 5px dashed pink;
@@ -243,14 +247,14 @@ h3 {
   padding-left: 20px;
   padding: 0px 20px 20px 20px;
 }
-/* line 238, ../sass/app.scss */
+/* line 242, ../sass/app.scss */
 .score-panel .stars {
   margin: 0;
   padding: 0;
   display: inline-block;
   margin: 0 5px 0 0;
 }
-/* line 244, ../sass/app.scss */
+/* line 248, ../sass/app.scss */
 .score-panel .stars li {
   list-style: none;
   display: inline-block;
